--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native-stack": "^6.9.23",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0",
+    "react-native-size-matters": "^0.4.2",
     "react-native-svg": "^14.1.0",
     "react-native-vector-icons": "^10.0.3"
   },
