--- a/package.json
+++ b/package.json
@@ -10,15 +10,24 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.22.3",
+    "@react-navigation/bottom-tabs": "^6.5.19",
+    "@react-navigation/material-bottom-tabs": "^6.2.27",
     "@react-navigation/native-stack": "^6.9.23",
+    "axios": "^0.21.4",
+    "base-64": "^1.0.0",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-size-matters": "^0.4.2",
     "react-native-svg": "^14.1.0",
-    "react-native-vector-icons": "^10.0.3"
+    "react-native-vector-icons": "^10.0.3",
+    "react-redux": "^9.1.0",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
