--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "base-64": "^1.0.0",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-confirmation-code-field": "^7.4.0",
+    "react-native-curved-bottom-bar": "^3.2.7",
+    "react-native-image-picker": "^7.1.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.9.0",
