--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-confirmation-code-field": "^7.4.0",
+    "react-native-countdown-component": "^2.7.1",
     "react-native-curved-bottom-bar": "^3.2.7",
     "react-native-image-picker": "^7.1.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
