--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -79,6 +79,8 @@ android {
         applicationId "com.scanskin"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
+        missingDimensionStrategy 'react-native-camera', 'general'
+         vectorDrawables.useSupportLibrary = true
         versionCode 1
         versionName "1.0"
     }
