--- a/package.json
+++ b/package.json
@@ -24,15 +24,18 @@
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-animatable": "^1.4.0",
+    "react-native-camera": "^4.2.1",
     "react-native-confirmation-code-field": "^7.4.0",
     "react-native-countdown-component": "^2.7.1",
     "react-native-curved-bottom-bar": "^3.2.7",
     "react-native-element-dropdown": "^2.12.0",
     "react-native-gesture-handler": "^2.16.2",
+    "react-native-image-crop-picker": "^0.41.2",
     "react-native-image-picker": "^7.1.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.3",
+    "react-native-qrcode-scanner": "^1.5.5",
     "react-native-reanimated": "^3.11.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
